<resources>
    <string name="app_name">PIM-Project</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add">add</string>
    <string name="image">image</string>
    <string name="e_mail">E-mail</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="country">Country</string>
    <string name="register">Register</string>
    <string name="birthdate">Birth date</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="verification">Verification</string>
    <string name="verify">Verify</string>
    <string name="create">Create</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="reset_code">Reset code</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_the_email_address_associated_with_your_account">Enter the email address associated with your account.</string>
    <string name="we_will_send_you_a_verification_code_to_check_your_authenticity">We will send you a verification code to check your authenticity.</string>

    <string name="new_password">New password</string>
    <string name="esprit_identifier">Esprit Identifier</string>
    <string name="classroom">Classroom</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_proceed">Are you sure you want to proceed ?</string>
    <string name="are_you_sure_you_want_to_cancel_booking">Are you sure you want to cancel booking ?</string>
    <string name="welcome_admin">Welcome admin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hardware_list">Hardware list</string>
    <string name="title">Title:</string>
    <string name="brand">Brand:</string>
    <string name="model">Model:</string>
    <string name="lab_number">Lab number:</string>
    <string name="go_to">go_to</string>
    <string name="admin_dashboard">Admin dashboard</string>
    <string name="edit_profile_informations">Edit profile informations</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_email">Profile email</string>
    <string name="profile_name">Profile name</string>
    <string name="my_profile">My profile</string>
    <string name="sign_out">Sign out</string>
    <string name="create_new_hardware">Create new hardware</string>
    <string name="reference">Reference:</string>
    <string name="save">Save</string>
    <string name="updating_data">Updating data …</string>
    <string name="reservation">Reservation</string>
    <string name="email_address">Email address</string>


    <string name="msg_email_not_valid">E-mail not valid !</string>
    <string name="msg_field_must_not_be_empty">Field must not be empty !</string>
    <string name="msg_password_must_have_at_least_6_characters">Password must have at least 6 characters !</string>
    <string name="msg_passwords_dont_match">Passwords don\'t match !</string>
    <string name="msg_identifier_must_have_10_characters">Identifier must have 10 characters !</string>
    <string name="msg_no_more_remove_one_character_please">No More Remove one character please !</string>
    <string name="msg_loading">Loading</string>
    <string name="msg_successfully_registered">Successfully registered</string>
    <string name="msg_data_updated_successfully">Data updated successfully</string>
    <string name="msg_welcome">Welcome</string>
    <string name="msg_user_already_exist">User already exist !</string>
    <string name="msg_hardware_created_successfully">Hardware created successfully</string>
    <string name="msg_hardware_updated_successfully">Hardware updated successfully</string>
    <string name="msg_error_getting_user_data">Error getting user data !</string>
    <string name="msg_reservation_confirmed">Reservation confirmed</string>


    <string name="Booking_canceled">Booking canceled</string>
    <string name="user_full_name"> %1$s %2$s</string>
    <string name="select_reservation_date">Select reservation date</string>
    <string name="next">Next</string>
    <string name="select_reservation_time">Select reservation time</string>
    <string name="hardware">Hardware</string>
    <string name="admin_staff">Admin staff</string>
    <string name="my_booking">My booking</string>
    <string name="show_my_booking_list">Show my booking list</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="my_booking_list">My Booking list</string>
    <string name="all_hardwares">All hardwares</string>
    <string name="show_update_hardwares">Show, update hardwares</string>
    <string name="no_hardwares_available_right_now_try_later">No hardwares available right now, try later !</string>
    <string name="you_don_t_have_any_bookings_yet">You don\'t have any bookings yet</string>
    <string name="all_bookings">All bookings</string>
    <string name="show_all_bookings">Show all bookings</string>
    <string name="there_is_no_booking_yet">There is no booking yet !</string>
    <string name="update_hardware">Update hardware</string>
    <string name="update">Update</string>
    <string name="hardware_informations">Hardware informations</string>
    <string name="user_informations">User informations</string>
    <string name="booking">Booking</string>
    <string name="booking_details">Booking details</string>
    <string name="enter_the_verification_code_we_just_sent_you_on_your_e_mail_address">Enter the verification code we just sent you on your e-mail address.</string>
    <string name="cancel_booking">Cancel booking</string>
</resources>