<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/main_profileImage"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_logo"
            android:contentDescription="@string/image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signIn_txtInput_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:errorEnabled="true"
            android:hint="@string/e_mail"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:maxLength="51"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signIn_txtInput_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/signIn_rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/login_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/forgot_your_password"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="end"/>

        <Button
            android:id="@+id/btn_signIn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/login_createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/create"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>