<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/hardware_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/hardware_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/brand"
            android:textSize="20sp"
            android:layout_below="@+id/hardware_title"/>

        <TextView
            android:id="@+id/hardware_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/model"
            android:textSize="20sp"
            android:layout_below="@+id/hardware_brand"/>

        <TextView
            android:id="@+id/hardware_lab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/lab_number"
            android:textSize="20sp"
            android:layout_below="@+id/hardware_model"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>