<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="155dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:background="@drawable/ic_key"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/enter_the_email_address_associated_with_your_account"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="17sp"
            android:text="@string/we_will_send_you_a_verification_code_to_check_your_authenticity" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgotPassword_txtInput_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:errorEnabled="true"
            android:hint="@string/e_mail"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotPassword_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:maxLength="51"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_forgotPassword_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_margin="20dp"
            android:text="@string/send" />

    </LinearLayout>
</ScrollView>