<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="125dp"
            android:layout_height="155dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:background="@drawable/ic_key"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/verification"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="17sp"
            android:text="Enter the verification code we just sent you on your e-mail address." />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verificationCode_txtInput_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:errorEnabled="true"
            android:hint="@string/reset_code"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verificationCode_edit_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:maxLength="6"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_verificationCode_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_margin="20dp"
            android:text="@string/verify" />

    </LinearLayout>
</ScrollView>